# reverse-proxy-rust

./: .env  .env.example  .gitignore  127.000.000.001.05984-127.000.000.001.37240  127.000.000.001.05984-127.000.000.001.37240-HTTPBODY-001.json  127.000.000.001.37240-127.000.000.001.05984  Cargo.toml  Dockerfile  Dockerfile.api  Dockerfile.debug  LICENSE.md  README.md  debug-docker-compose.yml  docker-compose.yml  report.xml  revert_print.diff  start-debug.sh  start.sh  trying_channels.diff
nginx/: nginx.conf  proxy.conf
node_simple_server_client/: client.js  package-lock.json  package.json  server.js
simple_server_client/: client.js  client_test.spec.js  package-lock.json  package.json  server.js
src/: main.rs
