[package]
name = "reverse_proxy_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper-reverse-proxy = "0.5"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["time", "full"] }
pretty_env_logger = "0.4.0"
lazy_static = "1.4.0"
tokio-core = "0.1.18"
futures = "0.3.23"
